--- a/portfolio.html
+++ b/portfolio.html
@@ -250,7 +250,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer1">
+    <footer class="footer">
       <div class="container sides">
         <div class="left-side">
           <a class="Logo link" href="/">
