--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       rel="stylesheet"
     />
     <!--Styles-->
-    <link rel="stylesheet " href="./css/styles.css" />
+    <link rel="stylesheet " href="./css/main.scss.min.css"/>
+    <link rel="stylesheet " href="./css/styles.css"/> 
   </head>
 
   <body>
@@ -36,7 +37,7 @@
       <div class="container header__container">
         <!--logo-->
         <a class="link" href="index.html"
-          ><span class="header__logo-style--blue">Web</span><span class="header__logo-style--black">Studio</span></a
+          ><span class="header__logo-style">Web</span><span class="header__logo-style--black">Studio</span></a
         >
         <!--Меню-->
         <nav class="menu">
@@ -511,7 +512,7 @@
       <div class="container footer__container">
         <div class="footer__side">
           <a class="footer__logo-link" href="/">
-            <span class="footer__logo-style--blue">Web</span><span class="footer__logo-style--white">Studio</span></a
+            <span class="footer__logo-style">Web</span><span class="footer__logo-style--white">Studio</span></a
           >
           <address>
             <ul class="footer__list">
@@ -537,7 +538,7 @@
             </ul>
           </address>
         </div>
-        <div class="footer__side">
+        <div class="footer__side--social">
           <h2 class="footer__title">присоединяйтесь</h2>
           <ul class="footer__social-list">
             <li class="list-item">
@@ -584,7 +585,7 @@
           |============================
         -->
         <div сlass="subscribe">
-          <form>
+          <form class="subscribe__form">
             <label>
               <strong class="subscribe__header">Подпишитесь на рассылку</strong><br>
               <input class="subscribe__input" type="email" placeholder="E-mail">
